css/style.less
---
---

@import "css/pygments";

.box_shadow(@x: 0px, @y: 0px, @blur: 10px, @color: #000) {
    -webkit-box-shadow: @x @y @blur @color;
    -moz-box-shadow: @x @y (@blur/2) @color;
    -o-box-shadow: @x @y @blur @color;
    box-shadow: @x @y @blur @color;
}
.transitionBoxShadow(@duration: 1s) {
    -webkit-transition: -webkit-box-shadow @duration;
    -moz-transition: -moz-box-shadow @duration;
    -o-transition: -o-box-shadow @duration;
    transition: box-shadow @duration;
}
.transitionWidth(@duration: 1s) {
    -webkit-transition: width @duration;
    -moz-transition: width @duration;
    -o-transition: width @duration;
    transition: width @duration;
}
.transitionHeight(@duration: 1s) {
    -webkit-transition: height @duration;
    -moz-transition: height @duration;
    -o-transition: height @duration;
    transition: height @duration;
}
.transitionOpacity(@duration: 1s) {
    -webkit-transition: opacity @duration;
    -moz-transition: opacity @duration;
    -o-transition: opacity @duration;
    transition: opacity @duration;
}
.rounded_corners(@radius: 3px) {
    -webkit-border-radius: @radius;
    -moz-border-radius: @radius;
    border-radius: @radius;
}
.no_bottom_rounded_corners {
    -webkit-border-bottom-left-radius: 0px;
    -moz-border-bottom-left-radius: 0px;
    border-bottom-left-radius: 0px;

    -webkit-border-bottom-right-radius: 0px;
    -moz-border-bottom-right-radius: 0px;
    border-bottom-right-radius: 0px;
}


@linkColor: #4183C4;

/* ---- CSS reset ---- */

body,div,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockquote,th,td{margin:0;padding:0;}
table{border-collapse:collapse;border-spacing:0;}
fieldset,img{border:0;}
address,caption,cite,code,dfn,em,th,var{font-style:normal;font-weight:normal;}
caption,th{text-align:left;}
h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}
q:before,q:after{content:'';}
abbr,acronym{border:0;}
em,i{font-style:italic}
ul,ol,li{padding:0;margin:0;list-style:none;}
strong,b{font-weight:bold}

/* ---- generic declarations ---- */

body {
    font-family: sans-serif;
    background-color: #fff;
    margin: 0px auto;
    width: 985px;
}
a:link, a:visited { 
    text-decoration: underline;
    color: @linkColor;
    :hover { color: #007CFF; text-decoration: none; }
    img { border: none; }
}
a[href=""] { text-decoration: line-through !important; }
em,i {
    font-style: italic;
}
h1 {
    line-height: 30px;
    font-size: 24px;
}
h1, h2 { color: #455360; }
h2 { font-size: 1.2em; font-weight: bold; }
h3 { font-size: 1.1em; font-weight: bold; }
table {
    th { font-weight: bold; }
    td, th { border: 1px solid black; padding: 2px; }
}
ul, ol {
    margin: 1em 0px 1em 2em;
    line-height: 1.7em;
}

/* ---- main layout ---- */

#wrapper {
    border: 1px solid #333;
    border-width: 0px;
    border-color: #c3c3c3;
    background-color: #ffffff;
}


// frame construction

header {
    background: url('../images/frame/logo-bg.png') no-repeat bottom left;
    margin: 0 auto;
    a { margin: 0; }
    img { margin-bottom: -3px; }
    height: 50px;
    padding-top: 13px;
    padding-left: 50px;
}
#navigation {
    background-image: url(../images/frame/menu.gif);
    height: 38px;
}
#container {
    background-image: url(../images/frame/body.gif);
    background-repeat: repeat-y;
    margin: 0px;
    padding: 0px 25px 0 25px;
}
footer {
    background: #ffffff url(../images/frame/footer.jpg) no-repeat;
    min-height: 100px;
    text-align: right;
    padding-right: 70px;
    padding-top: 30px;
    font-size: 13px;
    line-height: 16px;
    color: #4a7c93;
}

// frame using box_shadow where available
html.boxshadow {
    body { width: 935px; }
    header, #navigation, #container, footer { background: none; padding-left: 26px; }
    #navigation, #container { padding: 0px; }
    #wrapper { .box_shadow(0px,0px,60px,#A0C3D7); }
    #navigation { border-bottom: 2px solid #C1D4E8; height: 36px;  }
}


// navigation

#navigation {
    display: block;
    width: 935px;
    margin: 0px;
    margin-right: 25px;
    padding: 0px 25px;
    border-bottom: 0px;

    ul {
        margin: 0;
        padding: 0;
        list-style: none;
        position: relative;
        z-index: 100;
        
        li {
            display: inline-block;
            list-style: none;
            margin: 0;
            padding: 0;
            position: relative;
            font-weight: bold;
            
            a:link, a:visited {
                padding: 10px;
                background-color: #ffffff;
                border-right: 1px solid #bcd5db;
                display: inline-block;
                font: normal bold 13px/16px arial, sans-serif;
                color: #4f6a73;
                text-decoration: none;
                text-transform: none;
                letter-spacing: 0px;
                padding-left: 15px;
                padding-right: 15px;
                
            }
            a:link.active, a:hover {
                text-decoration: underline;
                background: none;
                background-image: url(http://www.gooddata.com/files/2009/10/navhover.png) ;
                background-repeat: no-repeat;
                color: #667071;
            }
            
        }
    }
}

.breadcrumbs {
    background-color: #F5F5F5;
    border: 0px none;
    margin-right: -1px;
    border-bottom: 1px solid #B2CFD6;
    padding: 0px 13px;
    padding-left: 60px;
    font-size: 14px;
    line-height: 36px;
    background: -webkit-gradient(linear,left top,left bottom,color-stop(0, rgb(226,234,240)),color-stop(0.4, rgb(245,245,245)));
    background: -moz-linear-gradient(center top,rgb(221,233,236) 0%,rgb(245,245,245) 40%);
}
/* ... */

